feat: added keyValue filter for invite + user
